Site is deployed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aryan-prog.github.io/blockflow",
+  "homepage": "https://aryan-prog.github.io/blockflow-assignment",
   "name": "blockflow",
   "version": "0.1.0",
   "private": true,
